--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   yaml: 3.1.1
   yaml_writer: ^1.0.3
+  markdown_widget: ^1.3.0+2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -24,3 +25,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/mock_response.json
+
+  fonts:
+    - family: 'Roboto Mono'
+      fonts:
+        - asset: assets/fonts/RobotoMono-Regular.ttf
