deploy: v0.1.0  - Details Modal

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/mock_response.json":["assets/mock_response.json"]}
+{"assets/fonts/RobotoMono-Regular.ttf":["assets/fonts/RobotoMono-Regular.ttf"],"assets/mock_response.json":["assets/mock_response.json"]}
