--- a/assets/FontManifest.json
+++ b/assets/FontManifest.json
@@ -1,1 +1,1 @@
-[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]}]
+[{"family":"MaterialIcons","fonts":[{"asset":"fonts/MaterialIcons-Regular.otf"}]},{"family":"Roboto Mono","fonts":[{"asset":"assets/fonts/RobotoMono-Regular.ttf"}]}]
