--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   yaml: 3.1.1
   yaml_writer: ^1.0.3
   markdown_widget: ^1.3.0+2
+  file_picker: ^5.2.4
 
 dev_dependencies:
   flutter_lints: ^2.0.0
